--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.6",
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "ngx-avatar": "^4.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
